[package]
name = "bevy_pbr_spherical"
version = "0.5.0"
edition = "2018"
authors = [
    "finegeometer <finegeometer@gmail.com>",
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = """A port of [`bevy_pbr`](https://docs.rs/bevy_pbr/0.5.0/bevy_pbr/), \
to work with spherical space instead of Euclidean space."""
license = "MIT"
keywords = ["bevy"]

[dependencies]
bevy_app = { version = "0.5.0" }
bevy_asset = { version = "0.5.0" }
bevy_core = { version = "0.5.0" }
bevy_derive = { version = "0.5.0" }
bevy_ecs = { version = "0.5.0" }
bevy_math = { version = "0.5.0" }
bevy_reflect = { version = "0.5.0", features = ["bevy"] }
bevy_render = { package = "bevy_render_spherical", path = "../bevy_render_spherical", version = "0.5.0" }
bevy_transform = { package = "bevy_transform_spherical", path = "../bevy_transform_spherical", version = "0.5.0" }
bevy_window = { version = "0.5.0" }
