[package]
name = "bevy_render_spherical"
version = "0.5.0"
edition = "2018"
authors = [
    "finegeometer <finegeometer@gmail.com>",
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = """A partial port of [`bevy_render`](https://docs.rs/bevy_render/0.5.0/bevy_render/), \
to work with spherical space instead of Euclidean space."""
license = "MIT"
keywords = ["bevy"]

[dependencies]
# Reuse what I can.
bevy_render = { version = "0.5.0" }

# bevy
bevy_app = { version = "0.5.0" }
bevy_asset = { version = "0.5.0" }
bevy_core = { version = "0.5.0" }
bevy_ecs = { version = "0.5.0" }
bevy_math = { version = "0.5.0" }
bevy_reflect = { version = "0.5.0", features = ["bevy"] }
bevy_transform_spherical = { path = "../bevy_transform_spherical", version = "0.5.0", features = ["render"] }
bevy_window = { version = "0.5.0" }
bevy_utils = { version = "0.5.0" }

[features]
png = ["bevy_render/png"]
hdr = ["bevy_render/hdr"]
dds = ["bevy_render/dds"]
tga = ["bevy_render/tga"]
jpeg = ["bevy_render/jpeg"]
bmp = ["bevy_render/bmp"]
