[package]
name = "bevy_transform_spherical"
version = "0.5.0"
edition = "2018"
authors = [
    "finegeometer <finegeometer@gmail.com>",
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = """A partial port of [`bevy_transform`](https://docs.rs/bevy_transform/0.5.0/bevy_transform/), \
to work with spherical space instead of Euclidean space."""
license = "MIT"
keywords = ["bevy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_transform = { version = "0.5.0" }

# bevy
bevy_app = { version = "0.5.0" }
bevy_ecs = { version = "0.5.0" }
bevy_math = { version = "0.5.0" }
bevy_reflect = { version = "0.5.0", features = ["bevy"] }
bevy_utils = { version = "0.5.0" }

# other
smallvec = { version = "1.6", features = ["serde", "union", "const_generics"] }