[package]
name = "bevy_wgpu_spherical"
version = "0.5.0"
edition = "2018"
authors = [
    "finegeometer <finegeometer@gmail.com>",
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = """A port of [`bevy_wgpu`](https://docs.rs/bevy_wgpu/0.5.0/bevy_wgpu/), \
to work with spherical space instead of Euclidean space."""
license = "MIT"
keywords = ["bevy"]

[features]
default = ["bevy_winit"]
trace = ["wgpu/trace"]

[dependencies]
# bevy
bevy_app = { version = "0.5.0" }
bevy_asset = { version = "0.5.0" }
bevy_core = { version = "0.5.0" }
bevy_diagnostic = { version = "0.5.0" }
bevy_ecs = { version = "0.5.0" }
bevy_render = { package = "bevy_render_spherical", path = "../bevy_render_spherical", version = "0.5.0" }
bevy_window = { version = "0.5.0" }
bevy_winit = { optional = true, version = "0.5.0" }
bevy_utils = { version = "0.5.0" }

# other
wgpu = "0.7"
futures-lite = "1.4.0"
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.1"
parking_lot = "0.11.0"
